added the delete button
try it on heroku

--- a/index.html
+++ b/index.html
@@ -48,12 +48,15 @@
                       </form>
                 </div>
 
+                <div id="theForm">
 
-                <div class="story">
-                    <h3 id='story_title'></h3>
-                    <h5 id='story_date'></h4>
-                    <p id='story_content'></p>
+                
+                        <input type="submit" class="btn" value="DELETE ALL"   >
+                      </form>
 
+
+
+                  </div> 
                   </div> 
 
             </div>
