--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@
                     <p id='story_content'></p>
 
                   </div> 
+                <div id="theForm">
+
+                
+                        <input type="submit" class="btn" value="DELETE ALL"   >
+                      </form>
+
+
+
+                  </div> 
+
 
             </div>
             <div class="col" id="stories">
