Updated by adding the onClick
changes made

--- a/index.html
+++ b/index.html
@@ -56,13 +56,8 @@
 
                   </div> 
                 <div id="theForm">
-
-                
-                        <input type="submit" class="btn" value="DELETE ALL"   >
-                      </form>
-
-
-
+                        <input type="submit" class="btn" value="DELETE ALL" onClick="deleteStories()">
+                      
                   </div> 
 
 
