--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <Div id="container">
             <div id="content">
-                <h2>Hello, Jessica</h2>
+                <h2>Hello, User</h2>
                 <h4>Today, <span id="date"></span></h4>
             </div>
         </Div>
